Removed grid-container styling causing layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
 .grid-container {
 	display: grid;
 	grid-template-columns: 1.1fr 0.9fr 1fr;
-	grid-template-rows: 1fr 6fr 1fr;
 	gap: 0px 0px;
 	grid-auto-flow: row;
 	grid-template-areas:
